Big doc snippet additions + style issues + weather data table

--- a/Energy.App.Standalone/Features/Setup/Meter/Pages/AddElectricityMeterPage.razor
+++ b/Energy.App.Standalone/Features/Setup/Meter/Pages/AddElectricityMeterPage.razor
@@ -7,17 +7,14 @@
     <MudItem xs="12">
         <MudPaper Elevation="2" Class="mt-2">
             <div class="d-flex justify-space-between mt-5">
-            <MudTooltip ShowOnHover="true" Text="Return to Setup">
-                <MudLink Underline="Underline.None"
-                         Href="@($"/Setup")">
-                    <MudButton Class="ma-5" Color="Color.Default"
-                               ButtonType="ButtonType.Button"
-                               Variant="Variant.Filled"
-                               Size="Size.Small">
-                        <span><i class="fa-solid fa-arrow-left" aria-hidden="true"></i> Back to Setup</span>
-                    </MudButton>
-                </MudLink>
-            </MudTooltip>
+                <MudTooltip ShowOnHover="true" Text="Return to Setup">
+                    <MudLink Underline="Underline.None" Href="@($"/Setup")">
+                        <MudButton Class="ma-5" Color="Color.Default" ButtonType="ButtonType.Button"
+                            Variant="Variant.Filled" Size="Size.Small">
+                            <span><i class="fa-solid fa-arrow-left" aria-hidden="true"></i> Back to Setup</span>
+                        </MudButton>
+                    </MudLink>
+                </MudTooltip>
             </div>
             <AddElectricityMeterFormComponent OnSuccessfulCallback="OnSuccessfulSave" />
         </MudPaper>
@@ -28,7 +25,8 @@
             <div class="d-flex justify-center">
                 <MudTooltip Text="Proceed to Authorize Meter for data access?">
                     <MudLink Underline="Underline.None" Href="@($"/MeterAuthorization/{MeterType.Electricity}")">
-                        <MudButton Color="Color.Success" ButtonType="ButtonType.Button" Variant="Variant.Filled" Size="Size.Small">Authorize</MudButton>
+                        <MudButton Color="Color.Success" ButtonType="ButtonType.Button" Variant="Variant.Filled"
+                            Size="Size.Small">Authorize</MudButton>
                     </MudLink>
                 </MudTooltip>
             </div>
