--- a/Energy.App.Standalone/Features/Setup/Meter/Pages/MeterAuthorizationPage.razor
+++ b/Energy.App.Standalone/Features/Setup/Meter/Pages/MeterAuthorizationPage.razor
@@ -7,22 +7,22 @@
 
 <MudGrid Justify="Justify.Center">
     <MudItem xs="12">
-        <MudPaper Elevation="2" Class="p-2 mt-2">
-            <MudTooltip ShowOnHover="true" Text="Return to Setup">
-                <MudLink Underline="Underline.None"
-                         Href="@($"/Setup")">
-                    <MudButton Class="ma-1" Color="Color.Primary"
-                               ButtonType="ButtonType.Button"
-                               Variant="Variant.Filled"
-                               Size="Size.Small">
-                        <span><i class="fa-solid fa-arrow-left" aria-hidden="true"></i> Back to Setup</span>
-                    </MudButton>
-                </MudLink>
-            </MudTooltip>
+        <MudPaper Elevation="2" Class="mt-2">
+            <div class="d-flex justify-space-between mt-5">
+
+                <MudTooltip ShowOnHover="true" Text="Return to Setup">
+                    <MudLink Underline="Underline.None" Href="@($"/Setup")">
+                        <MudButton Class="ma-5" Color="Color.Default" ButtonType="ButtonType.Button"
+                            Variant="Variant.Filled" Size="Size.Small">
+                            <span class="fw-bolder"><i class="fa-solid fa-arrow-left" aria-hidden="true"></i> Back to Setup</span>
+                        </MudButton>
+                    </MudLink>
+                </MudTooltip>
+            </div>
             @if (ParametersSet)
             {
-                <MeterAuthorizationFormComponent FreshNavigation="true"
-                    MeterType="MeterType" OnSuccessfulCallback="OnSuccessfulCallback" />
+                <MeterAuthorizationFormComponent FreshNavigation="true" MeterType="MeterType"
+                    OnSuccessfulCallback="OnSuccessfulCallback" />
             }
         </MudPaper>
     </MudItem>
