--- a/Energy.App.Standalone/PageComponents/CopyToClipboardTextField.razor
+++ b/Energy.App.Standalone/PageComponents/CopyToClipboardTextField.razor
@@ -1,38 +1,31 @@
 ﻿@implements IAsyncDisposable
-<div
-    class="d-flex justify-end align-end">
-    
-    @ChildContent
-    
-
-    <MudTooltip
-        Inline="true"
-        Placement="Placement.Top">
-        <TooltipContent>
-            <MudText
-                Typo="Typo.body2">@copyToClipboardTooltip</MudText>
-        </TooltipContent>
-        <ChildContent>
-            <MudIconButton
-                Title="Copy to Clipboard?"
-                Icon="@copyToClipboardIcon"
-                Size="Size.Small"
-                OnClick="CopyToClipboardClick"
-                Variant="Variant.Filled"/>
-        </ChildContent>
-    </MudTooltip>
+<div class="d-flex flex-row flex-grow-1 justify-space-between align-end">
+    <div class="flex-grow-1">
+        @ChildContent
+    </div>
+    <div class="ml-5">
+        <MudTooltip Inline="true" Placement="Placement.Top">
+            <TooltipContent>
+                <MudText Typo="Typo.body2">@copyToClipboardTooltip</MudText>
+            </TooltipContent>
+            <ChildContent>
+                <MudIconButton Color="Color.Info" Title="Copy to Clipboard?" Icon="@copyToClipboardIcon" Size="Size.Small"
+                        OnClick="CopyToClipboardClick" Variant="Variant.Outlined" />
+            </ChildContent>
+        </MudTooltip>
+    </div>
 </div>
 @code {
 
     [Parameter, EditorRequired] public RenderFragment ChildContent { get; set; }
 
-    [Parameter, EditorRequired] public string CopyString { get; set; } 
+    [Parameter, EditorRequired] public string CopyString { get; set; }
 
     [Inject] IJSRuntime JS { get; set; }
     [Inject] ILogger<CopyToClipboardTextField> Logger { get; set; }
 
 
-    string copyToClipboardIcon = Icons.Material.Filled.ContentCopy;
+    string copyToClipboardIcon = Icons.Material.Outlined.ContentCopy;
     string copyToClipboardTooltip = "Copy to Clipboard";
 
     private IJSObjectReference module;
@@ -42,7 +35,7 @@
         if (firstRender)
         {
             module = await JS.InvokeAsync<IJSObjectReference>("import",
-                "./PageComponents/CopyToClipboardTextField.razor.js");
+            "./PageComponents/CopyToClipboardTextField.razor.js");
         }
     }
 
@@ -58,7 +51,7 @@
                 copyToClipboardTooltip = "Copied";
                 StateHasChanged();
                 await Task.Delay(5000);
-                copyToClipboardIcon = Icons.Material.Filled.ContentCopy;
+                copyToClipboardIcon = Icons.Material.Outlined.ContentCopy;
                 copyToClipboardTooltip = "Copy to Clipboard";
             }
         }
