--- a/Energy.App.Standalone/PageComponents/DocTooltipDialog.razor
+++ b/Energy.App.Standalone/PageComponents/DocTooltipDialog.razor
@@ -9,29 +9,23 @@
                 <i class="fa-solid fa-xmark fa-xl" aria-hidden="true"></i>
             </MudIconButton>
          </div>
+         @if(!ErrorLoadingSnippet) {
+            <MudLink Typo="Typo.h6" Class="cursor-pointer mb-5 fw-bolder"  Color="Color.Inherit" Href="@DocumentLink" Underline="Underline.Hover" Target="_blank">Open Documentation <i aria-hidden="true" class="fa">&#xf08e;</i></MudLink>
+         }
     </TitleContent>
     <DialogContent>
         <MudText  Typo="Typo.body1">@SnippetContent</MudText>
     </DialogContent>
-    <DialogActions>
-        <MudLink Typo="Typo.h6" Class="mb-5 fw-bolder" Color="Color.Inherit" Href="@DocumentLink" Underline="Underline.Hover" Target="_blank">Open Documentation <i aria-hidden="true" class="fa">&#xf08e;</i></MudLink>
-
-    </DialogActions>
 
 </MudDialog>
 
 @code {
 
+    [Parameter, EditorRequired] public bool ErrorLoadingSnippet { get; set; }
     [Parameter, EditorRequired] public RenderFragment SnippetContent { get; set; }
     [Parameter, EditorRequired] public string DocumentLink { get; set; }
 
     [CascadingParameter] MudDialogInstance MudDialog { get; set; }
-
-    private DialogOptions DialogOptions = new()
-        {
-            MaxWidth = MaxWidth.Medium,
-            CloseButton = true,
-        };
 
     string _docSnippetHeader;
     protected override void OnParametersSet()
